# artifacts-tui

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
sentient_artifacts/: __init__.py
sentient_artifacts/client/: __init__.py  bot_manager_client.py  official_client.py
sentient_artifacts/tui/: __init__.py  app.css  app.py
sentient_artifacts/tui/widgets/: __init__.py
sentient_artifacts/tui/widgets/character_card/: __init__.py  card.py  sprite.py  stat_bar.py
sentient_artifacts/tui/widgets/character_card/formatting/: __init__.py  actions.py  decisions.py  icons.py  missions.py  normalization.py  task_list.py
sentient_artifacts/tui/widgets/crafting_demand_panel/: __init__.py  formatting.py  models.py  normalization.py  panel.py  rendering.py  tables.py
sentient_artifacts/tui/widgets/global_stats/: __init__.py  clock.py  formatting.py  view.py
sentient_artifacts/tui/widgets/log_console/: __init__.py  console.py  formatting.py
sentient_artifacts/tui/widgets/matrix_view/: __init__.py  entries.py  rendering.py  view.py
tests/: test_character_card_skin_normalization.py  test_tui_demand_polling.py
